--- a/trial/index.html
+++ b/trial/index.html
@@ -21,6 +21,13 @@
 
 <div id="gameScene" class="scene">
   <h1>ゲーム画面</h1>
+  <button id="loadFolder0">空白のカード</button>
+  <button id="loadFolder1">命のカード</button>
+  <button id="loadSpecificImages">ドカドカ空命</button>
+
+
+  <div id="gameImages"></div>
+
   <button id="showResult">結果発表</button>
 </div>
 
@@ -30,6 +37,6 @@
 </div>
 
 <script src="script.js"></script>
-
+<script src="loadImage.js"></script>
 </body>
 </html>
