--- a/trial/index.html
+++ b/trial/index.html
@@ -21,14 +21,12 @@
 </div>
 
 <div id="gameScene" class="scene">
-  <h1>ゲーム画面</h1>
-
   <div id="gameImages"></div>
+  <div id="textArea">
+    <p id="text">ここにゲームの文章が表示されます</p>
+  </div>
 
   <div id="buttonArea">
-    <img class="imageButton" src="button/00.jpg" alt="フォルダ0" data-folder="0">
-    <img class="imageButton" src="button/01.jpg" alt="フォルダ1" data-folder="1">
-    <img class="imageButton" src="button/01.jpg" alt="フォルダ2" data-folder="X">
   </div>
   
 
