--- a/trial/index.html
+++ b/trial/index.html
@@ -40,6 +40,6 @@
 </div>
 
 <script src="script.js"></script>
-<script src="loadImage.js"></script>
+<script src="gameScene.js"></script>
 </body>
 </html>
