--- a/trial/index.html
+++ b/trial/index.html
@@ -21,6 +21,21 @@
 </div>
 
 <div id="gameScene" class="scene">
+  <!-- ロード画面 -->
+  <div id="loadingScreen" style="display: none;">
+    <div class="loader"></div>
+  </div>
+
+  <!--開始演出画面-->>
+  <div id="gameIntro">
+    <!-- 演出用のテキストや画像を追加 -->
+    <div id="readyGo">Ready Go!</div>
+    <!-- ここに演出用のイラストなどを追加 -->
+  </div>
+
+
+  <div id="score">スコア: 0</div>
+  <div id="timer">残り時間: 30秒</div>
   <div id="gameImages"></div>
   <div id="textArea">
     <p id="text">ここにゲームの文章が表示されます</p>
