--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 </div>
 
 <div id="gameScene" class="scene">
-    <div class="backImage"></div>
+    <div class="backImage">
+        <div id="fadeOverlay"></div>
+    </div>
     <div id="methodsBox" class="box methodsBox">
         <div class="description">ここに説明文を記述します</div>
         <div id="startButtonImage"></div>
@@ -42,6 +44,7 @@
     <div id="messageArea">
         <span id="message"></span>
     </div>
+
     <div id="textArea">
         <div id="dynamicBox" class="box textBox">
             <span id="text">ここにテキストが表示されます</span>
