--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<title>シンプルな画面遷移ゲーム</title>
+<title>Ability Montage</title>
 <link rel="stylesheet" href="styles.css">
+<link rel="icon" href="images/favicon.ico">
 </head>
-<body>
+<body oncontextmenu="return false;">
 
 
 <div id="initScene" class="scene active">
