--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 <body oncontextmenu="return false;">
 
-
 <div id="initScene" class="scene active">
     <!-- ロード画面 -->
     <div id="loadingScreen" class="loading-screen">
@@ -74,6 +73,18 @@
         わーいわーい
     </div>
 </div>
+
+<div id="outerDescription">
+    <h2>遊び方</h2>
+    <p>
+        指定の文字を持つカードをクリックして文を完成させよう！<br>
+        カードイラストはすべて手書きです。原作の画像とは異なります。<br>
+        感想、バグ報告、新たな問題文の提案は<a href="https://twitter.com/RUSnRG1">https://twitter.com/RUSnRG1</a>まで
+    </p>
+    <h2>お借りした素材</h2>
+    <a href="https://soundeffect-lab.info/">効果音ラボ</a>
+</div>
+
 
 <script src="init.js"></script>
 <script src="titleScreen.js"></script>
