--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="ja" prefix="og: http://ogp.me/ns#">
 <head>
 <meta charset="UTF-8">
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:site" content="@RUSnRG1" />
+<meta name="twitter:title" content="Ability Montage" />
+<meta name="twitter:description" content="アビリティカード並び替えゲーム" />
+<meta name="twitter:image" content="https://rusnrg1.github.io/Ability-Montage.github.io/images/o2.png" />
 <title>Ability Montage</title>
 <link rel="stylesheet" href="styles.css">
 <link rel="icon" href="images/favicon.ico">
@@ -78,8 +83,13 @@
     <h2>遊び方</h2>
     <p>
         指定の文字を持つカードをクリックして文を完成させよう！<br>
+        どのカードか分からなくてもしばらく経つと正解が黄色枠で表示されます。<br>
         カードイラストはすべて手書きです。原作の画像とは異なります。<br>
         感想、バグ報告、新たな問題文の提案は<a href="https://twitter.com/RUSnRG1">https://twitter.com/RUSnRG1</a>まで
+    </p>
+    <h2>更新履歴</h2>
+    <p>
+        2023.11.29 ここに更新履歴を載せる
     </p>
     <h2>お借りした素材</h2>
     <a href="https://soundeffect-lab.info/">効果音ラボ</a>
