--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--ソースコードも秘匿してくれ尊大椅子女さんよ。-->
 <!DOCTYPE html>
 <html lang="ja" prefix="og: http://ogp.me/ns#">
 <head>
@@ -6,7 +7,7 @@
 <meta name="twitter:site" content="@RUSnRG1" />
 <meta name="twitter:title" content="Ability Montage" />
 <meta name="twitter:description" content="アビリティカード並び替えゲーム" />
-<meta name="twitter:image" content="https://rusnrg1.github.io/Ability-Montage.github.io/images/o2.png" />
+<meta name="twitter:image" content="https://rusnrg1.github.io/Ability-Montage.github.io/images/TwitterCard.png" />
 <title>Ability Montage</title>
 <link rel="stylesheet" href="styles.css">
 <link rel="icon" href="images/favicon.ico">
