--- a/index.html
+++ b/index.html
@@ -81,16 +81,18 @@
 </div>
 
 <div id="outerDescription">
-    <h2>遊び方</h2>
+    <h2>遊び方：指定の文字を持つカードをクリックして文を完成させよう！</h2>
     <p>
-        指定の文字を持つカードをクリックして文を完成させよう！<br>
-        どのカードか分からなくてもしばらく経つと正解が黄色枠で表示されます。<br>
-        カードイラストはすべて手書きです。原作の画像とは異なります。<br>
+        詳細な遊び方：<br>
+        問題文を完成させるとお金と酸素を貰えます。多くのカードを用いるほど貰える量も増えます。<br>
+        間違えると酸素が少し減ります。どのカードか分からなくてもしばらく経つと正解が黄色枠で表示されます。<br>
+        カードイラストはすべて手書きです。原作の画像とは異なりますのでご了承ください。<br>
         感想、バグ報告、新たな問題文の提案は<a href="https://twitter.com/RUSnRG1">https://twitter.com/RUSnRG1</a>まで
     </p>
     <h2>更新履歴</h2>
     <p>
         2023.11.29 ここに更新履歴を載せる
+        2023.11.30 得点、時間計算の更新　みたいな感じ。
     </p>
     <h2>お借りした素材</h2>
     <a href="https://soundeffect-lab.info/">効果音ラボ</a>
