--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 
     <audio id="touchSound"></audio>
     <audio id="clearSound"></audio>
+    <audio id="excellentClearSound"></audio>
+    <audio id="gameoverSound"></audio>
     <audio id="missSound"></audio>
     <audio id="BGM"></audio>
 
