--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <audio id="gameoverSound"></audio>
     <audio id="missSound"></audio>
     <audio id="BGM"></audio>
+    <audio id="gameClearBGM"></audio>
 
     
     <div id="desk"></div>
