--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         詳細な遊び方：<br>
         問題文を完成させるとお金と酸素を貰えます。多くのカードを用いるほど貰える量も増えます。<br>
         間違えると酸素が少し減ります。どのカードか分からなくてもしばらく経つと正解が黄色枠で表示されます。<br>
-        カードイラストはすべて手書きです。原作の画像とは異なりますのでご了承ください。<br>
+        カードイラストはすべて手書きです。原作の画像と異なりますのでご了承ください。<br>
         感想、バグ報告、新たな問題文の提案は<a href="https://twitter.com/RUSnRG1">https://twitter.com/RUSnRG1</a>まで
     </p>
     <h2>更新履歴</h2>
