--- a/index.html
+++ b/index.html
@@ -87,14 +87,16 @@
     <h2>遊び方：指定の文字を持つカードをクリックして文を完成させよう！</h2>
     <p>
         詳細な遊び方：<br>
-        問題文を完成させるとお金と酸素を貰えます。多くのカードを用いるほど貰える量も増えます。<br>
-        間違えると酸素が少し減ります。どのカードか分からなくてもしばらく経つと正解が黄色枠で表示されます。<br>
+        問題文を完成させるとお金と酸素が増えます。多くのカードを用いるほど増える量も増えます。<br>
+        間違えると酸素が少し減ります。カードが分からなくても一定時間経過で正解が黄色枠で表示されます。<br>
+        50000点とると……？？<br><br>
         カードイラストはすべて手書きです。原作の画像と異なりますのでご了承ください。<br>
         感想、バグ報告、新たな問題文の提案は<a href="https://twitter.com/RUSnRG1">https://twitter.com/RUSnRG1</a>まで
     </p>
     <h2>更新履歴</h2>
     <p>
         2023.12.01 公開<br>
+        2023.12.02 各種調整<br>
     </p>
     <h2>お借りした素材</h2>
     <a href="https://soundeffect-lab.info/">効果音ラボ</a>
