--- a/nengazyo/index.html
+++ b/nengazyo/index.html
@@ -15,10 +15,9 @@
 <body oncontextmenu="return false;">
 
 <div id="outerDescription">
-    <h2>遊び方：指定の文字を持つカードをクリックして文を完成させよう！</h2>
     <p>
         詳細な遊び方：<br>
-        問題文を完成させるとお金と酸素が増えます。多くのカードを用いるほど増える量も増えます。<br>
+        ああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ<br>
         間違えると酸素が少し減ります。カードが分からなくても一定時間経過で正解が黄色枠で表示されます。<br>
         50000点とると……？？<br><br>
         カードイラストはすべて手書きです。原作の画像と異なりますのでご了承ください。<br>
