--- a/FlappyTotetsu/index.html
+++ b/FlappyTotetsu/index.html
@@ -14,16 +14,17 @@
 </head>
 <body oncontextmenu="return false;">
 
-<div id="initScene" class="scene">
+<div id="initScene" class="scene active">
     <!-- ロード画面 -->
 </div>
 
-<div id="gameScene" class="scene active">
+<div id="gameScene" class="scene">
     <canvas id ="face" width = "930" height = "750"></canvas>
-</div>
-
-<div id="resultScene" class="scene">
-
+    <div id="resultImage" class="result">
+        <div id="scoreResult">獲得金額: 0</div>
+        <div id="oneMore"></div>
+        <div id="Tweet"></div>
+    </div>
 </div>
 
 <div id="outerDescription">
