--- a/FlappyTotetsu/index.html
+++ b/FlappyTotetsu/index.html
@@ -20,8 +20,28 @@
 
 <div id="gameScene" class="scene">
     <canvas id ="face" width = "930" height = "750"></canvas>
+
+    <div id = background></div>
+
+    <div id="title">
+        <div id="titleText">Flappy Totetsu</div>
+        <div id="play"></div>
+    </div>
+
+    <div id="intro">
+        <div id="introduction"></div>
+        <div id="start"></div>
+            
+    </div>
+
+    <div id="game">
+        <div id="barO" class="kuhuku-bar-outer">
+            <div id="barI" class="kuhuku-bar-inner" style="width: 100%;"></div>
+        </div>
+    </div>
+
     <div id="resultImage" class="result">
-        <div id="scoreResult">獲得金額: 0</div>
+        <div id="score">: 0</div>
         <div id="oneMore"></div>
         <div id="Tweet"></div>
     </div>
