--- a/FlappyTotetsu/index.html
+++ b/FlappyTotetsu/index.html
@@ -20,12 +20,16 @@
 
 <div id="gameScene" class="scene">
     <canvas id ="face" width = "930" height = "750"></canvas>
+    
 
     <div id = background></div>
 
     <div id="title">
         <div id="titleText">Flappy Totetsu</div>
         <div id="play"></div>
+        <div id=waitMotion></div>
+        <div id=chargeMotion></div>
+        <div id=damageMotion></div>
     </div>
 
     <div id="intro">
