--- a/FlappyTotetsu/index.html
+++ b/FlappyTotetsu/index.html
@@ -42,6 +42,8 @@
         <div id="barO" class="kuhuku-bar-outer">
             <div id="barI" class="kuhuku-bar-inner" style="width: 100%;"></div>
         </div>
+        <div id=totetsuHead></div>
+        <div id=totetsuBody></div>
     </div>
 
     <div id="resultImage" class="result">
