--- a/FlappyTotetsu/index.html
+++ b/FlappyTotetsu/index.html
@@ -22,7 +22,11 @@
     <canvas id ="face" width = "930" height = "750"></canvas>
     
 
-    <div id = background></div>
+    <div id = background1-1></div>
+    <div id=background1-2></div>
+    <div id=background2-1></div>
+    <div id=background2-2></div>
+
 
     <div id="title">
         <div id="titleText">Flappy Totetsu</div>
@@ -44,6 +48,7 @@
         </div>
         <div id=totetsuHead></div>
         <div id=totetsuBody></div>
+        <div id=hand></div>
     </div>
 
     <div id="resultImage" class="result">
