--- a/FlappyTotetsu/index.html
+++ b/FlappyTotetsu/index.html
@@ -49,6 +49,7 @@
         <div id=totetsuHead></div>
         <div id=totetsuBody></div>
         <div id=hand></div>
+        <div id="foods"></div>
     </div>
 
     <div id="resultImage" class="result">
