--- a/FlappyTotetsu/index.html
+++ b/FlappyTotetsu/index.html
@@ -7,7 +7,7 @@
 <meta name="twitter:site" content="@RUSnRG1" />
 <meta name="twitter:title" content="Flappy Totetsu" />
 <meta name="twitter:description" content="フラッピー饕餮" />
-<meta name="twitter:image" content="https://rusnrg1.github.io/Ability-Montage.github.io/images/TwitterCard.png"/>
+<meta name="twitter:image" content="https://rusnrg1.github.io/Ability-Montage.github.io/FlappyTotetsu/images/base.png"/>
 <title>Flappy Totetsu</title>
 <link rel="stylesheet" href="styles.css">
 <link rel="icon" href="images/favicon.ico">
@@ -29,11 +29,11 @@
 
 
     <div id="title">
-        <div id="titleText">Flappy Totetsu</div>
+        <div id="titleText"></div>
+        <div id="base"></div>
         <div id="play"></div>
         <div id=waitMotion></div>
         <div id=chargeMotion></div>
-        <div id=damageMotion></div>
     </div>
 
     <div id="intro">
@@ -53,9 +53,12 @@
     </div>
 
     <div id="resultImage" class="result">
-        <div id="score">: 0</div>
+        <div id="result"></div>
+        <div id="score">SCORE: 0</div>
         <div id="oneMore"></div>
         <div id="Tweet"></div>
+        <div id="score2">SCORE: 0</div>
+        <div id="bestscore">Best: 0</div>
     </div>
 </div>
 
