--- a/FlappyTotetsu/index.html
+++ b/FlappyTotetsu/index.html
@@ -10,7 +10,7 @@
 <meta name="twitter:image" content="https://rusnrg1.github.io/Ability-Montage.github.io/FlappyTotetsu/images/base.png"/>
 <title>Flappy Totetsu</title>
 <link rel="stylesheet" href="styles.css">
-<link rel="icon" href="images/favicon.ico">
+<link rel="icon" href="FlappyTotetsu/images/favicon.ico">
 </head>
 <body oncontextmenu="return false;">
 
@@ -50,6 +50,10 @@
         <div id=totetsuBody></div>
         <div id=hand></div>
         <div id="foods"></div>
+        <audio id="jumpSound"></audio>
+        <audio id="eatSound"></audio>
+        <audio id="scoreSound"></audio>
+        <audio id="overSound"></audio>
     </div>
 
     <div id="resultImage" class="result">
