--- a/FlappyTotetsu/index.html
+++ b/FlappyTotetsu/index.html
@@ -10,7 +10,7 @@
 <meta name="twitter:image" content="https://rusnrg1.github.io/Ability-Montage.github.io/FlappyTotetsu/images/base.png"/>
 <title>Flappy Totetsu</title>
 <link rel="stylesheet" href="styles.css">
-<link rel="icon" href="https://rusnrg1.github.io/Ability-Montage.github.io/FlappyTotetsu/images/favicon.ico">
+<link rel="icon" href="./FlappyTotetsu/images/favicon.ico">
 </head>
 <body oncontextmenu="return false;">
 
