--- a/FlappyTotetsu/index.html
+++ b/FlappyTotetsu/index.html
@@ -67,20 +67,21 @@
 </div>
 
 <div id="outerDescription">
-    <h2>遊び方：明日書く</h2>
+    <h2>遊び方：空腹になる前に弾幕を避けながらご飯を集めよう！</h2>
     <p>
         詳細な遊び方：<br>
-        明日書く<br><br>
-        <br>
+        画面クリックで饕餮がジャンプします。<br>
+        弾幕に当たるか空腹メーターが0になるとゲームオーバーです。<br>
+        目指せスコア100！<br>
         感想、バグ報告、新たな問題文の提案は<a href="https://twitter.com/RUSnRG1">https://twitter.com/RUSnRG1</a>まで
     </p>
     <h2>更新履歴</h2>
     <p>
-        2023.12.01 公開<br>
-        2023.12.02 各種調整<br>
+        2024.02.25 公開<br>
     </p>
     <h2>お借りした素材</h2>
     <a href="https://soundeffect-lab.info/">効果音ラボ</a>
+    <a href="https://illustimage.com/">イラストイメージ</a>
 </div>
 
 
