--- a/Game/index.html
+++ b/Game/index.html
@@ -48,11 +48,15 @@
             </div>
         </div>
         <div class="grid-item">
-            <img src="image2.jpg" alt="脱出レッドブロック">
+            <a href="7-7/index.html">
+                <img src="images/AbilityMontage.jpg" alt="Ability Montage">
+            </a>
             <div class="description">
-                脱出レッドブロックの説明。このゲームは、赤いブロックを動かして出口に導くパズルゲームです。
+                <div class="title">七夕坂天気予報</div>
+                七夕坂の10時の天気をお知らせします。
             </div>
         </div>
+
         <div class="grid-item">
             <img src="image3.jpg" alt="森の冒険パズル">
             <div class="description">
