--- a/Game/7-7/index.html
+++ b/Game/7-7/index.html
@@ -9,39 +9,40 @@
 <body>
     <div class="weather-container">
         <div class="current-weather">
-            <img id="current-weather-image" src="images/sunny_1.jpg" alt="現在の天気">
+            <img id="current-weather-image" src="images/sunny_1.png" alt="現在の天気">
         </div>
         <div class="forecast-container">
             <div class="forecast" id="forecast-0">
-                <img src="images/sunny_1.jpg" alt="天気予報">
+                <img src="images/sunny_1.png" alt="天気予報">
                 <p>6/14</p>
             </div>
             <div class="forecast" id="forecast-1">
-                <img src="images/sunny_1.jpg" alt="天気予報">
+                <img src="images/sunny_2.png" alt="天気予報">
                 <p>6/15</p>
             </div>
             <div class="forecast" id="forecast-2">
-                <img src="images/sunny_1.jpg" alt="天気予報">
+                <img src="images/sunny_1.png" alt="天気予報">
                 <p>6/16</p>
             </div>
             <div class="forecast" id="forecast-3">
-                <img src="images/sunny_1.jpg" alt="天気予報">
+                <img src="images/sunny_1.png" alt="天気予報">
                 <p>6/17</p>
             </div>
             <div class="forecast" id="forecast-4">
-                <img src="images/sunny_1.jpg" alt="天気予報">
+                <img src="images/sunny_1.png" alt="天気予報">
                 <p>6/18</p>
             </div>
             <div class="forecast" id="forecast-5">
-                <img src="images/sunny_1.jpg" alt="天気予報">
+                <img src="images/sunny_1.png" alt="天気予報">
                 <p>6/19</p>
             </div>
             <div class="forecast" id="forecast-6">
-                <img src="images/sunny_1.jpg" alt="天気予報">
+                <img src="images/sunny_1.png" alt="天気予報">
                 <p>6/20</p>
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
+
+    <script type="module" src="script.js"></script>
 </body>
 </html>
