--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <colgroup><col span="1" valign="bottom">
   </colgroup><tbody><tr valign="bottom" align="left">
       <td valign="bottom" height="756" width="410"></td>
-      <td valign="bottom" height="756"><font color="#2c3a2d">まだ作り途中なので見ないでください。End of My Lilithです</font><br>
+      <td valign="bottom" height="756"><font color="#2c3a2d">まだ作り途中なので見ないでください。リスペクトであってパクリでは無い</font><br>
       <sub><font color="#518a6a" size="2" style="font:12px/13px">
       <br>
       <br>
@@ -93,14 +93,14 @@
     <tr>
       <td colspan="2" width="824" valign="bottom" height="329" align="center"> <a href="image/banner.gif"><img src="image/banner.gif" width="200" height="40" border="0"></a><br>
       <font size="-1"><br>
-      Cああああああああああああ<a href="http://www.popls.co.jp/"><img src="img/poplsbn.gif" width="200" height="40" alt="" border="0"></a>株式会社ポプルス様にお願いしております。</font><br>
+      Cああああああああああああ<a href="http://www.popls.co.jp/"><img src="img/poplsbn.gif" width="200" height="40" alt="" border="0"></a>ああああああああああああああ。</font><br>
       <br>
       <font size="-1">あああああああああああああああああ<br>
       <br>
       ああああああああぁぁぁ<br>
-      ああああああああぁぁぁ <a href="http://www16.big.or.jp/~zun/">http://www16.big.or.jp/~zun/</a> にお願いします</font><br>
+      ああああああああぁぁぁ <a href="http://">http://</a> にお願いします</font><br>
       <br>
-      あああああああああああああ<a href="mailto:zun@big.jp">zun@big.jp</a>
+      あああああああああああああ<a href="">@</a>
   	<br clear="all">
       
     <script language="JavaScript">
