--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <font size="-1">あああああああああああああああああ<br>
       <br>
       ああああああああぁぁぁ<br>
-      ああああああああぁぁぁ <a href="http://">http://</a> にお願いします</font><br>
+      ああああああああぁぁぁ <a href="http://">http://</a> あああああああああ</font><br>
       <br>
       あああああああああああああ<a href="">@</a>
   	<br clear="all">
