--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h2>Information</h2>
                 <div class="info-content">
                     <p>ここに情報を載せます。内容が多くなるとスクロール可能になるんじゃないかな？</p>
-                    <p>ここに情報を載せます。内容が多くなるとスクロール可能になります。</p>
+                    <p>ここに情報を載せます。内容が多くなるとスクロール可能になるような気がしてならないな。</p>
                     <p>ここに情報を載せます。内容が多くなるとスクロール可能になります。</p>
                     <p>ここに情報を載せます。内容が多くなるとスクロール可能になります。</p>
                     <p>ここに情報を載せます。内容が多くなるとスクロール可能になります。</p>
