--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Layout</title>
+    <title>End of my Lilith</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body bgcolor="#000000" text="#5e998d" link="#46644e" vlink="#6864b9">
     <header>
         <div class="slider">
             <img src="images/header.png" alt="Top Illustration">
-            <div class="slider-text">追憶、失踪、狂気、苦痛、End of My Lilith</div>
+            <div class="slider-text">作り途中なので見ないでください。End of My Lilith</div>
         </div>
     </header>
     <main>
