大体形完成

--- a/Game/index.html
+++ b/Game/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+    <body bgcolor="#000000" text="#80a6b0" link="#46644e" vlink="#6864b9"></body>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grid Layout</title>
@@ -44,29 +45,16 @@
             </a>
             <div class="description">
                 <div class="title">Ability Montage</div>
-                アビリティカードの文字を並び替えて文章を作るゲーム
+                ！！現在バグ起きてるのでクリアできません！！
             </div>
         </div>
         <div class="grid-item">
-            <a href="7-7/index.html">
-                <img src="images/AbilityMontage.jpg" alt="Ability Montage">
+            <a href="FlappyTotetsu/index.html">
+                <img src="images/FlappyTotetsu.png" alt="FlappyTotetsu">
             </a>
             <div class="description">
-                <div class="title">七夕坂天気予報</div>
-                七夕坂の10時の天気をお知らせします。
-            </div>
-        </div>
-
-        <div class="grid-item">
-            <img src="image3.jpg" alt="森の冒険パズル">
-            <div class="description">
-                森の冒険パズルの説明。森の中でアイテムを見つけてパズルを解くアドベンチャーゲームです。
-            </div>
-        </div>
-        <div class="grid-item">
-            <img src="image4.jpg" alt="パズルタイニー合唱団">
-            <div class="description">
-                パズルタイニー合唱団の説明。音符を合わせて美しいメロディーを作るパズルゲームです。
+                <div class="title">Ability Montage</div>
+                障害物をよけつつ空腹にならないようにご飯を食べるゲーム
             </div>
         </div>
         <!-- ここに他のグリッド項目を追加 -->
