--- a/Distribution/index.html
+++ b/Distribution/index.html
@@ -35,7 +35,7 @@
         .description {
             flex: 1;
             padding: 10px;
-            background-color: #010029;
+            background-color: #141b22;
             /* Light grey background for the description */
         }
 
@@ -44,50 +44,58 @@
         }
     </style>
 </head>
-
-<body bgcolor="#000000" text="#5e998d" link="#46644e" vlink="#6864b9" alink="#89d3ac" style="background-image:url(img/hplogo2.jpg);
-             background-repeat:no-repeat">
+<body bgcolor="#000000" text="#80a6b0" link="#46644e" vlink="#6864b9"></body>
 <body>
     <div class="container">
         <!-- Example Entry -->
         <div class="book">
             <img src="images/Fran.png" alt="Book Cover">
             <div class="description">
-                <h2>Frandle, For Frandle <span class="format">(小説・イラスト)</span></h2>
+                <h2>Frandle, For Frandle <span class="format">(A5 小説)</span></h2>
                 <p>2023/05/07 第二十回博麗神社例大祭 にて頒布</p>
                 <p>尤フラ×あきゅすずの話</p>
-                <p><span class="format">一言：黒歴史なので忘れてください</span></p>
+                <p><span class="format">黒歴史なので忘れてください</span></p>
             </div>
         </div>
 
         <div class="book">
             <img src="images/Chinese_Food.jpg" alt="Book Cover">
             <div class="description">
-                <h2>中華美食探訪 <span class="format">(漫画)</span></h2>
+                <h2>中華美食探訪 <span class="format">(B5　漫画)</span></h2>
                 <p>2023/10/15 第一九回 東方紅楼夢 にて頒布</p>
                 <p>饕餮熱望幻一品　吉弔翻弄此我儘　美鈴演神業調理　娘々企姑息取引</p>
-                <p><span class="format">一言：見本を読んで、ガチ中国語だと勘違いする方がたくさんいて面白かったです。</span></p>
+                <p><span class="format">本作使用偽中国語。然、数人見本誌読後、勘違本当中国語。我大変愉快。</span></p>
             </div>
         </div>
 
         <div class="book">
             <img src="images/Left_eye.jpg" alt="Book Cover">
             <div class="description">
-                <h2>左目の追憶 <span class="format">(小説)</span></h2>
+                <h2>左目の追憶 <span class="format">(A6　小説)</span></h2>
                 <p>2024/06/01 夢の世紀 魅知の旅 再訪 (遠野秘封) にて頒布</p>
                 <p>七夕坂夢幻能に対するアンチテーゼ。それが導き出すのは、秘封倶楽部の無限性と秘封オタクの不可能性。</p>
-                <p><span class="format">一言：神主さんさぁ、相対性精神学のこと下に見すぎじゃないですか？</span></p>
+                <p><span class="format">確率論の崩壊って何ですか？</span></p>
             </div>
         </div>
 
+        <div class="book">
+            <img src="images/header.png" alt="Book Cover">
+            <div class="description">
+                <h2>二面性理論 <span class="format">(A4横　イラスト本)</span></h2>
+                <p>2024/07/15 幺樂団カァニバル!13にて頒布</p>
+                <p>蓬莱ミリしらから一カ月で描き上げた、暗く不気味な不思議なイラストたち</p>
+                <p><span class="format">一か月で蓬莱人形50周くらいしたんですが、結局何もわかりません</span></p>
+            </div>
+        </div>
         
         <!-- 以下のようにコピペすればどんどん追加できる。下に追加すればページでは勝手に上に行く。
         <div class="book">
-            <img src="images/Left_eye.jpg" alt="Book Cover">
+            <img src="images/header.png" alt="Book Cover">
             <div class="description">
-                <h3>左目の追憶</h3>
-                <p>2024/06/01 夢の世紀 魅知の旅 再訪(遠野秘封)にて頒布</p>
-                <p>七夕坂夢幻能に対するアンチテーゼ。それが導き出すのは秘封倶楽部の無限性と秘封オタクの不可能性。</p>
+                <h2>二面性理論 <span class="format">(A4横　イラスト本)</span></h2>
+                <p>2024/07/15 幺樂団カァニバル!13にて頒布</p>
+                <p>蓬莱ミリしらから一カ月で描き上げた、暗く不気味な不思議なイラストたち</p>
+                <p><span class="format">一か月で蓬莱人形50周くらいしたんですが、結局何もわかりません</span></p>
             </div>
         </div>
     -->
