--- a/index.html
+++ b/index.html
@@ -6,53 +6,41 @@
     <title>End of my Lilith</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body bgcolor="#000000" text="#5e998d" link="#46644e" vlink="#6864b9">
+<body bgcolor="#000000" text="#80a6b0" link="#46644e" vlink="#6864b9">
     <header>
         <div class="slider">
             <img src="images/header.png" alt="Top Illustration">
-            <div class="slider-text">作り途中なので見ないでください。End of My Lilith</div>
+            <div class="slider-text">作り途中なので見ないでください。</div>
         </div>
     </header>
     <main>
         <div class="main_contents">
             <div class="information">
-                <h2>Information</h2>
+                <h1>Information</h1>
                 <div class="info-content">
-                    <p>ここに情報を載せます。内容が多くなるとスクロール可能になります。</p>
-                    <p>ここに情報を載せます。内容が多くなるとスクロール可能になります。</p>
-                    <p>ここに情報を載せます。内容が多くなるとスクロール可能になります。</p>
-                    <p>ここに情報を載せます。内容が多くなるとスクロール可能になります。</p>
-                    <p>ここに情報を載せます。内容が多くなるとスクロール可能になります。</p>
-                    <p>ここに情報を載せます。内容が多くなるとスクロール可能になります。</p>
-                    <p>ここに情報を載せます。内容が多くなるとスクロール可能になります。</p>
-                    <p>ここに情報を載せます。内容が多くなるとスクロール可能になります。</p>
-                    <p>ここに情報を載せます。内容が多くなるとスクロール可能になります。</p>
+                    <p>2024/10/20　第十一回博麗神社秋季例大祭に申し込みました</p>
+                    <p>2024/10/06　第二十回東方紅楼夢に申し込みました</p>
+                    <p>2024/09/23　科学世紀のカフェテラスに申し込みました</p>
+                    
+                    <!-- <p>ここに情報を載せます。内容が多くなるとスクロール可能になります。</p> -->
                     <!-- ここにさらに多くの情報を追加できます -->
                 </div>
             </div>
             <div class="whats-new">
-                <h2>What's New</h2>
+                <h1>What's New</h1>
                 <div class="whats-new-content">
-                    <p>ここに最新情報を載せます。</p>
-                    <p>ここに最新情報を載せます。</p>
-                    <p>ここに最新情報を載せます。</p>
-                    <p>ここに最新情報を載せます。</p>
-                    <p>ここに最新情報を載せます。</p>
+                    <p>2024/07/20？　End of My Lilith　HPオープン！</p>
                     <!-- ここにさらに多くの情報を追加できます -->
                 </div>
             </div>
             <div class="content">
-                <h2>Content</h2>
+                <h1>Content</h1>
                 <div class="content-area">
-                    <p>ここにコンテンツを載せます。</p>
-                    <p>ここにコンテンツを載せます。</p>
-                    <p>ここにコンテンツを載せます。</p>
-                    <p>ここにコンテンツを載せます。</p>
-                    <p>ここにコンテンツを載せます。</p>
-                    <p>ここにコンテンツを載せます。</p>
-                    <p>ここにコンテンツを載せます。</p>
-                    <p>ここにコンテンツを載せます。</p>
-                    <p>ここにコンテンツを載せます。</p>
+                    <p><a href="https://x.com/RUSnRG1">About</a></p>
+                    <p><a href="Distribution/index.html">Book</a></p>
+                    <p><a href="Game/index.html">Game</a></p>
+                    <p><a href="">Music(準備中)</a></p>
+                    <p><a href="">Cosplay(準備中)</a></p>
                     <!-- ここにさらに多くのコンテンツを追加できます -->
                 </div>
             </div>
@@ -61,9 +49,9 @@
     <footer>
         <p>&copy; 2023-2024 "End of My Lilith" All Rights Reserved.</p>
         <div class="social-icons">
-            <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
-            <a href="#"><img src="twitter-icon.png" alt="Twitter"></a>
-            <a href="#"><img src="line-icon.png" alt="Line"></a>
+            <a href="https://x.com/RUSnRG1"><img src="twitter-icon.png" alt="Twitter"></a>
+            <a href="#"><img src="facebook-icon.png" alt="BlueSky"></a>       
+            <a href="#"><img src="line-icon.png" alt="Pixiv"></a>
         </div>
     </footer>
     <script src="script.js"></script>
