--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="slider">
             <img src="images/header.png" alt="Top Illustration">
-            <div class="slider-text">作り途中なので見ないでください。</div>
+            <div class="slider-text">And its Rebirth</div>
         </div>
     </header>
     <main>
@@ -18,9 +18,9 @@
             <div class="information">
                 <h1>Information</h1>
                 <div class="info-content">
-                    <p>2024/10/20　第十一回博麗神社秋季例大祭に申し込みました</p>
-                    <p>2024/10/06　第二十回東方紅楼夢に申し込みました</p>
-                    <p>2024/09/23　科学世紀のカフェテラスに申し込みました</p>
+                    <p>第十一回博麗神社秋季例大祭に申し込みました</p>
+                    <p>第二十回東方紅楼夢に申し込みました</p>
+                    <p>科学世紀のカフェテラスに申し込みました</p>
                     
                     <!-- <p>ここに情報を載せます。内容が多くなるとスクロール可能になります。</p> -->
                     <!-- ここにさらに多くの情報を追加できます -->
