--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <div class="content-area">
                     <p><a href="https://x.com/RUSnRG1">About</a></p>
                     <p><a href="Distribution/index.html">Book</a></p>
+                    <p><a href="Blog/index.html">Blog</a></p>
                     <p><a href="Game/index.html">Game</a></p>
                     <p><a href="">Music(準備中)</a></p>
                     <p><a href="">Cosplay(準備中)</a></p>
