make obstacle & collision

--- a/Game/zunbou/index.html
+++ b/Game/zunbou/index.html
@@ -49,6 +49,7 @@
 <script src="resultScreen.js"></script>
 
 <script src="class/player.js"></script>
+<script src="class/Obstacle.js"></script>
 
 </body>
 </html>
