--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="whats-new">
                 <h1>What's New</h1>
                 <div class="whats-new-content">
-                    <p>2024/07/20？　End of My Lilith　HPオープン！</p>
+                    <p>2024/07/20？　End of My Lilith　HP仮オープン</p>
                     <!-- ここにさらに多くの情報を追加できます -->
                 </div>
             </div>
