--- a/Game/zunbou/index.html
+++ b/Game/zunbou/index.html
@@ -49,7 +49,12 @@
 <script src="resultScreen.js"></script>
 
 <script src="class/player.js"></script>
-<script src="class/Obstacle.js"></script>
+<script src="class/Building.js"></script>
+<script src="class/airplane.js"></script>
+<script src="class/firework.js"></script>
+<script src="class/star.js"></script>
+<script src="class/UFO.js"></script>
+
 
 </body>
 </html>
