--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body bgcolor="#000000" text="#80a6b0" link="#46644e" vlink="#6864b9">
+    <div id="container">
     <header>
         <div class="slider">
             <img src="images/header.png" alt="Top Illustration">
@@ -18,6 +19,7 @@
             <div class="information">
                 <h1>Information</h1>
                 <div class="info-content">
+                    <p>三連続イベントお疲れさまでした！</p>
                     <p>第十一回博麗神社秋季例大祭に申し込みました</p>
                     <p>第二十回東方紅楼夢に申し込みました</p>
                     <p>科学世紀のカフェテラスに申し込みました</p>
@@ -46,6 +48,7 @@
                 </div>
             </div>
         </div>
+    </div>
     </main>
     <footer>
         <p>&copy; 2023-2024 "End of My Lilith" All Rights Reserved.</p>
