make blog_index page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <a href="about.html" class="content-item">About</a>
                 <a href="book.html" class="content-item">Book</a>
                 <a href="game.html" class="content-item">Game</a>
-                <a href="Blog.html" class="content-item">Blog</a>
+                <a href="/Blog/index.html" class="content-item">Blog</a>
                 <a href="music.html" class="content-item">Music</a>
                 <a href="cosplay.html" class="content-item">Cosplay</a>
             </div>
