make blog.js & modify script.js

--- a/NF13.html
+++ b/NF13.html
@@ -10,32 +10,15 @@
     </head>
     <body>
         <div id="container">
-            <div class="slider">
-                <img src="/images/header.png" alt="Top Illustration">
-            </div>
-            <div class="content-links">
-                <a href="/About/index.html" class="content-item">About</a>
-                <a href="/NF13.html" class="content-item">Book</a>
-                <a href="/NF13.html" class="content-item">Game</a>
-                <a href="/Blog/index.html" class="content-item">Blog</a>
-                <a href="/NF13.html" class="content-item">Music</a>
-                <a href="/NF13.html" class="content-item">Cosplay</a>
-            </div>
-            
+            <div class="slider-placeholder"></div>
+            <div class="contentlink-placeholder"></div>
             <div class="kouji">
                 <h1>工事中。今しばらくお待ちください。</h1>
                 <img src="/images/NF13.png" alt="おいオオワシ霊、そこ代われ。">
             </div>
             
         </div>  
-        <footer>
-            <p>&copy; 2023-2024 "End of My Lilith" All Rights Reserved.</p>
-            <div class="social-icons">
-                <a href="https://x.com/RUSnRG1"><img src="twitter-icon.png" alt="Twitter"></a>
-                <a href="#"><img src="facebook-icon.png" alt="BlueSky"></a>       
-                <a href="#"><img src="line-icon.png" alt="Pixiv"></a>
-            </div>
-        </footer>
+        <div class="footer-placeholder"></div>
 
         <!-- ページ読み込み時にMarkdownファイルを指定してロード -->
         <script>
