--- a/index.html
+++ b/index.html
@@ -9,38 +9,27 @@
     </head>
     <body>
         <div id="container">
-            <div class="slider">
-                <img src="images/header.png" alt="Top Illustration">
-            </div>
-            <div class="content-links">
-                <a href="about.html" class="content-item">About</a>
-                <a href="book.html" class="content-item">Book</a>
-                <a href="game.html" class="content-item">Game</a>
-                <a href="/Blog/index.html" class="content-item">Blog</a>
-                <a href="music.html" class="content-item">Music</a>
-                <a href="cosplay.html" class="content-item">Cosplay</a>
-            </div>
+            <div class="slider-placeholder"></div>
+            <div class="contentlink-placeholder"></div>
             <main>
                 <div class="main_contents">
                     <div class="information">
                         <h1>Information</h1>
                         <div class="info-content">
-                            <p>・冬コミ当選してほしいな
-                            </p>
+                            <!-- 上から情報を追加する -->
+                            <p>・C105当選しました</p>
                             <p>・第十一回博麗神社秋季例大祭に申し込みました</p>
                             <p>・第二十回東方紅楼夢に申し込みました</p>
                             <p>・科学世紀のカフェテラスに申し込みました</p>
-                            
-                            <!-- <p>ここに情報を載せます。内容が多くなるとスクロール可能になります。</p> -->
-                            <!-- ここにさらに多くの情報を追加できます -->
                         </div>
                     </div>
                     <div class="whats-new">
                         <h1>What's New</h1>
                         <div class="whats-new-content">
-                            <p>2024/07/20？　End of My Lilith　HPオープン</p>
-                            <p>2024/11/02 HP大幅更新</p>
-                            <!-- ここにさらに多くの情報を追加できます -->
+                            <!-- 上から情報を追加する -->
+                            <p>2024/11/xx HP大幅更新</p>
+                            <p>2024/07/20 End of My Lilith　HPオープン</p>
+                            
                         </div>
                     </div>
                     <div class="content">
@@ -59,13 +48,6 @@
             </main>
 
         </div>
-        <footer>
-            <p>&copy; 2023-2024 "End of My Lilith" All Rights Reserved.</p>
-            <div class="social-icons">
-                <a href="https://x.com/RUSnRG1"><img src="twitter-icon.png" alt="Twitter"></a>
-                <a href="#"><img src="facebook-icon.png" alt="BlueSky"></a>       
-                <a href="#"><img src="line-icon.png" alt="Pixiv"></a>
-            </div>
-        </footer>
+        <div class="footer-placeholder"></div>
     </body>
 </html>
