--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
                     <div class="content">
                         <h1>Content</h1>
                         <div class="content-area">
-                            <p><a href="https://x.com/RUSnRG1">About</a></p>
-                            <p><a href="Distribution/index.html">Book</a></p>
-                            <p><a href="Blog/index.html">Blog</a></p>
-                            <p><a href="Game/index.html">Game</a></p>
-                            <p><a href="">Music(準備中)</a></p>
-                            <p><a href="">Cosplay(準備中)</a></p>
+                            <p><a href="/About/index.html">About</a></p>
+                            <p><a href="/NF13.html">Work(準備中)</a></p>
+                            <p><a href="/NF13.html">Blog</a></p>
+                            <p><a href="/NF13.html">Game(準備中)</a></p>
+                            <p><a href="/NF13.html">Music(準備中)</a></p>
+                            <p><a href="/NF13.html">Cosplay(準備中)</a></p>
                             <!-- ここにさらに多くのコンテンツを追加できます -->
                         </div>
                     </div>
