--- a/About/index.html
+++ b/About/index.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8">
         <meta name="auther" content="れう すずらぎ">
         <title>End of My Lilith</title><!--タイトル入れる。タブに表示される-->
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="/Emd-of-My-Lilith/style.css">
         <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-        <script src="/script.js"></script>
+        <script src="/Emd-of-My-Lilith/script.js"></script>
     </head>
     <body>
         <div id="container">
@@ -25,7 +25,7 @@
                     <p>好きなものは剛欲異聞、秘封、蓬莱人形です。</p>
                 </div>
                 <div class="about_img">
-                    <img src="/images/About.png" alt="about img">
+                    <img src="/Emd-of-My-Lilith/images/About.png" alt="about img">
                 </div>
             </div>
             
