/End-of-My-Lilith

--- a/html_source/content-links.html
+++ b/html_source/content-links.html
@@ -1,8 +1,8 @@
 <div class="content-links">
-    <a href="/About/index.html" class="content-item">About</a>
-    <a href="/NF13.html" class="content-item">Work</a>
-    <a href="/NF13.html" class="content-item">Blog</a>
-    <a href="/NF13.html" class="content-item">Game</a>
-    <a href="/NF13.html" class="content-item">Music</a>
-    <a href="/NF13.html" class="content-item">Cosplay</a>
+    <a href="/End-of-My-Lilith/About/index.html" class="content-item">About</a>
+    <a href="/End-of-My-Lilith/NF13.html" class="content-item">Work</a>
+    <a href="/End-of-My-Lilith/NF13.html" class="content-item">Blog</a>
+    <a href="/End-of-My-Lilith/NF13.html" class="content-item">Game</a>
+    <a href="/End-of-My-Lilith/NF13.html" class="content-item">Music</a>
+    <a href="/End-of-My-Lilith/NF13.html" class="content-item">Cosplay</a>
 </div>
