--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <meta name="auther" content="れう すずらぎ">
         <title>End of my Lilith</title>
-        <link rel="stylesheet" href="style.css">
-        <script src="script.js"></script>
+        <link rel="stylesheet" href="/End-of-My-Lilith/style.css">
+        <script src="/End-of-My-Lilith/script.js"></script>
     </head>
     <body>
         <div id="container">
@@ -35,12 +35,12 @@
                     <div class="content">
                         <h1>Content</h1>
                         <div class="content-area">
-                            <p><a href="/About/index.html">About</a></p>
-                            <p><a href="/NF13.html">Work(準備中)</a></p>
-                            <p><a href="/NF13.html">Blog</a></p>
-                            <p><a href="/NF13.html">Game(準備中)</a></p>
-                            <p><a href="/NF13.html">Music(準備中)</a></p>
-                            <p><a href="/NF13.html">Cosplay(準備中)</a></p>
+                            <p><a href="/End-of-My-Lilith/About/index.html">About</a></p>
+                            <p><a href="/End-of-My-Lilith/NF13.html">Work(準備中)</a></p>
+                            <p><a href="/End-of-My-Lilith/NF13.html">Blog</a></p>
+                            <p><a href="/End-of-My-Lilith/NF13.html">Game(準備中)</a></p>
+                            <p><a href="/End-of-My-Lilith/NF13.html">Music(準備中)</a></p>
+                            <p><a href="/End-of-My-Lilith/NF13.html">Cosplay(準備中)</a></p>
                             <!-- ここにさらに多くのコンテンツを追加できます -->
                         </div>
                     </div>
