--- a/NF13.html
+++ b/NF13.html
@@ -6,7 +6,7 @@
         <title>End of My Lilith</title><!--タイトル入れる。タブに表示される-->
         <link rel="stylesheet" href="/style.css">
         <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-        <script src="/script.js"></script>
+        <script src="/End-of-My-Lilith/script.js"></script>
     </head>
     <body>
         <div id="container">
@@ -14,7 +14,7 @@
             <div class="contentlink-placeholder"></div>
             <div class="kouji">
                 <h1>工事中。今しばらくお待ちください。</h1>
-                <img src="/images/NF13.png" alt="おいオオワシ霊、そこ代われ。">
+                <img src="/End-of-My-Lilith/images/NF13.png" alt="おいオオワシ霊、そこ代われ。">
             </div>
             
         </div>  
