--- a/html_source/slider.html
+++ b/html_source/slider.html
@@ -1,5 +1,5 @@
 <div class="slider">
-    <a href="/index.html">
-        <img src="/images/header.png" alt="Top Illustration">
+    <a href="/End-of-My-Lilith/index.html">
+        <img src="/End-of-My-Lilith/images/header.png" alt="Top Illustration">
     </a>
 </div>
