--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <div class="content-area">
                             <p><a href="/End-of-My-Lilith/About/index.html">About</a></p>
                             <p><a href="/End-of-My-Lilith/NF13.html">Work(準備中)</a></p>
-                            <p><a href="/End-of-My-Lilith/NF13.html">Blog</a></p>
+                            <p><a href="/End-of-My-Lilith/Blog/index.html">Blog</a></p>
                             <p><a href="/End-of-My-Lilith/NF13.html">Game(準備中)</a></p>
                             <p><a href="/End-of-My-Lilith/NF13.html">Music(準備中)</a></p>
                             <p><a href="/End-of-My-Lilith/NF13.html">Cosplay(準備中)</a></p>
