--- a/End-of-My-Lilith/html_source/content-links.html
+++ b/End-of-My-Lilith/html_source/content-links.html
@@ -1,7 +1,7 @@
 <div class="content-links">
     <a href="/End-of-My-Lilith/About/index.html" class="content-item">About</a>
-    <a href="/End-of-My-Lilith/NF13.html" class="content-item">Work</a>
-    <a href="/End-of-My-Lilith/NF13.html" class="content-item">Blog</a>
+    <a href="/End-of-My-Lilith/Works/index.html" class="content-item">Works</a>
+    <a href="/End-of-My-Lilith/Blog/index.html" class="content-item">Blog</a>
     <a href="/End-of-My-Lilith/NF13.html" class="content-item">Game</a>
     <a href="/End-of-My-Lilith/NF13.html" class="content-item">Music</a>
     <a href="/End-of-My-Lilith/NF13.html" class="content-item">Cosplay</a>
