--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <h1>Content</h1>
                         <div class="content-area">
                             <p><a href="/End-of-My-Lilith/About/index.html">About</a></p>
-                            <p><a href="/End-of-My-Lilith/NF13.html">Work(準備中)</a></p>
+                            <p><a href="/End-of-My-Lilith/Works/index.html">Works</a></p>
                             <p><a href="/End-of-My-Lilith/Blog/index.html">Blog</a></p>
                             <p><a href="/End-of-My-Lilith/NF13.html">Game(準備中)</a></p>
                             <p><a href="/End-of-My-Lilith/NF13.html">Music(準備中)</a></p>
