--- a/Works/index.html
+++ b/Works/index.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8">
         <meta name="auther" content="れう すずらぎ">
         <title>End of My Lilith Works</title><!--ここにブログタイトル入れる。タブに表示される-->
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="../style.css">
         <script src="/script.js" defer></script>
-        <script src="/End-of-My-Lilith/Works/script_works.js" defer></script>
+        <script src="./script_works.js" defer></script>
     </head>
     <body>
         <div id="container">
@@ -35,7 +35,7 @@
 
                     -->
                     <div class="work-item" data-category="東方二次創作">
-                        <img src="images/Yellow.png" alt="本の表紙" class="book-cover">
+                        <img src="./images/Yellow.png" alt="本の表紙" class="book-cover">
                         <div class="book-info">
                             <h3 class="book-title">Yellow Blue Vase</h3>
                             <p class="book-description">
