--- a/html_source/content-links.html
+++ b/html_source/content-links.html
@@ -1,5 +1,5 @@
 <div class="content-links">
-    <a href="/End-of-My-Lilith/About/index.html" class="content-item">About</a>
+    <a href="/About/index.html" class="content-item">About</a>
     <a href="/End-of-My-Lilith/Works/index.html" class="content-item">Works</a>
     <a href="/End-of-My-Lilith/Blog/index.html" class="content-item">Blog</a>
     <a href="/End-of-My-Lilith/NF13.html" class="content-item">Game</a>
