--- a/html_source/slider.html
+++ b/html_source/slider.html
@@ -1,5 +1,5 @@
 <div class="slider">
-    <a href="./index.html">
+    <a href="/index.html">
         <img src="/images/header.png" alt="Top Illustration">
     </a>
 </div>
