--- a/About/index.html
+++ b/About/index.html
@@ -12,7 +12,7 @@
                     baseTag.href = "/";
                 } else {
                     // 本番環境: GitHub Pagesのパス
-                    baseTag.href = "/End-of-My-Lilith/";
+                    baseTag.href = "/End-of-My-Lilith";
                 }
     
                 // <head> に <base> タグを挿入
