--- a/About/index.html
+++ b/About/index.html
@@ -12,7 +12,7 @@
                     baseTag.href = "/";
                 } else {
                     // 本番環境: GitHub Pagesのパス
-                    baseTag.href = "/End-of-My-Lilith";
+                    baseTag.href = "/End-of-My-Lilith/";
                 }
     
                 // <head> に <base> タグを挿入
@@ -22,9 +22,9 @@
         <meta charset="UTF-8">
         <meta name="auther" content="れう すずらぎ">
         <title>End of My Lilith</title><!--タイトル入れる。タブに表示される-->
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="./style.css">
         <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-        <script src="/script.js"></script>
+        <script src="./script.js"></script>
     </head>
     <body>
         <div id="container">
