--- a/Works/index.html
+++ b/Works/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html lang="ja">
     <head>
+        <script>
+            // ローカル環境と本番環境を判定して <base> タグを動的に設定
+            (function() {
+                var baseTag = document.createElement("base");
+                
+                // hostname でローカル環境か本番環境かを判定
+                if (location.hostname === "192.168.10.110" || location.hostname === "localhost") {
+                    // ローカル環境: Live Serverなど
+                    baseTag.href = "/";
+                } else {
+                    // 本番環境: GitHub Pagesのパス
+                    baseTag.href = "/End-of-My-Lilith/";
+                }
+    
+                // <head> に <base> タグを挿入
+                document.head.appendChild(baseTag);
+            })();
+        </script>
         <meta charset="UTF-8">
         <meta name="auther" content="れう すずらぎ">
         <title>End of My Lilith Works</title><!--ここにブログタイトル入れる。タブに表示される-->
-        <link rel="stylesheet" href="../style.css">
-        <script src="/script.js" defer></script>
-        <script src="./script_works.js" defer></script>
+        <link rel="stylesheet" href="style.css">
+        <script src="script.js" defer></script>
+        <script src="Works/script_works.js" defer></script>
     </head>
     <body>
         <div id="container">
@@ -35,7 +53,7 @@
 
                     -->
                     <div class="work-item" data-category="東方二次創作">
-                        <img src="./images/Yellow.png" alt="本の表紙" class="book-cover">
+                        <img src="Works/images/Yellow.png" alt="本の表紙" class="book-cover">
                         <div class="book-info">
                             <h3 class="book-title">Yellow Blue Vase</h3>
                             <p class="book-description">
