--- a/About/index.html
+++ b/About/index.html
@@ -43,7 +43,7 @@
                     <p>好きなものは剛欲異聞、秘封、蓬莱人形です。</p>
                 </div>
                 <div class="about_img">
-                    <img src="/images/About.png" alt="about img">
+                    <img src="images/About.png" alt="about img">
                 </div>
             </div>
             
