--- a/Works/index.html
+++ b/Works/index.html
@@ -66,7 +66,7 @@
                         </div>
                     </div>
                     <div class="work-item" data-category="東方二次創作">
-                        <img src="images/春怨.png" alt="本の表紙" class="book-cover">
+                        <img src="Works/images/春怨.png" alt="本の表紙" class="book-cover">
                         <div class="book-info">
                             <h3 class="book-title">春怨</h3>
                             <p class="book-description">
@@ -79,7 +79,7 @@
                         </div>
                     </div>
                     <div class="work-item" data-category="東方二次創作">
-                        <img src="images/dual-aspect.png" alt="本の表紙" class="book-cover">
+                        <img src="Works/images/dual-aspect.png" alt="本の表紙" class="book-cover">
                         <div class="book-info">
                             <h3 class="book-title">二面性理論</h3>
                             <p class="book-description">
@@ -92,7 +92,7 @@
                         </div>
                     </div>
                     <div class="work-item" data-category="東方二次創作">
-                        <img src="images/Left_eye.jpg" alt="本の表紙" class="book-cover">
+                        <img src="Works/images/Left_eye.jpg" alt="本の表紙" class="book-cover">
                         <div class="book-info">
                             <h3 class="book-title">左目の追憶</h3>
                             <p class="book-description">
@@ -105,7 +105,7 @@
                         </div>
                     </div>
                     <div class="work-item" data-category="東方二次創作">
-                        <img src="images/Chinese_Food.jpg" alt="本の表紙" class="book-cover">
+                        <img src="Works/images/Chinese_Food.jpg" alt="本の表紙" class="book-cover">
                         <div class="book-info">
                             <h3 class="book-title">中華美食探訪</h3>
                             <p class="book-description">
@@ -117,7 +117,7 @@
                         </div>
                     </div>
                     <div class="work-item" data-category="東方二次創作">
-                        <img src="images/Fran.png" alt="本の表紙" class="book-cover">
+                        <img src="Works/images/Fran.png" alt="本の表紙" class="book-cover">
                         <div class="book-info">
                             <h3 class="book-title">Frandle, For Frandle</h3>
                             <p class="book-description">
